--- a/TodoList/Views/Home/Index.cshtml
+++ b/TodoList/Views/Home/Index.cshtml
@@ -1,4 +1,7 @@
-﻿<!-- BEGIN PAGE TITLE-->
+﻿@{ 
+    ViewData["Title"] = "Anasayfa";
+}
+<!-- BEGIN PAGE TITLE-->
 <h1 class="page-title">
     Blank Page Layout
     <small>blank page layout</small>
