--- a/TodoList/Views/Home/Index.cshtml
+++ b/TodoList/Views/Home/Index.cshtml
@@ -11,3 +11,7 @@
 <div class="note note-info">
     <p> A black page template with a minimal dependency assets to use as a base for any custom page you create </p>
 </div>
+@if (Session["StatusMessage"]!= null)
+{
+    @Session["StatusMessage"].ToString()
+}
