--- a/TodoList/Views/Categories/Delete.cshtml
+++ b/TodoList/Views/Categories/Delete.cshtml
@@ -1,14 +1,14 @@
 ﻿@model TodoList.Models.Category
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Kategori Sil";
 }
 
-<h2>Delete</h2>
+<h2>Sil</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Silmek istediğinize emin misiniz?</h3>
 <div>
-    <h4>Category</h4>
+    <h4>Kategori</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -57,8 +57,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Sil" class="btn btn-danger" /> |
+            @Html.ActionLink("Listeye Geri Dön", "Index")
         </div>
     }
 </div>
