--- a/TodoList/Views/Categories/Details.cshtml
+++ b/TodoList/Views/Categories/Details.cshtml
@@ -1,13 +1,13 @@
 ﻿@model TodoList.Models.Category
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Kategori Ayrıntıları";
 }
 
-<h2>Details</h2>
+<h2>Ayrıntılar</h2>
 
 <div>
-    <h4>Category</h4>
+    <h4>Kategori</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -53,6 +53,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Düzenle", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Listeye Geri Dön", "Index")
 </p>
