--- a/TodoList/Views/TodoItems/Delete.cshtml
+++ b/TodoList/Views/TodoItems/Delete.cshtml
@@ -297,7 +297,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-danger" /> |
+            <input type="submit" value="Sil" class="btn btn-danger" /> |
             @Html.ActionLink("Listeye Geri Dön", "Index")
         </div>
     }
