Index Button Ekleme

--- a/TodoList/Views/TodoItems/Index.cshtml
+++ b/TodoList/Views/TodoItems/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Yapılacaklar</h2>
 
 <p>
-    @Html.ActionLink("Yeni Oluştur", "Create", new { @class = "btn btn-primary" })
+    @Html.ActionLink("Yeni Oluştur", "Create",null, new { @class = "btn btn-primary" })
 </p>
 <table class="table">
     <tr>
