Üyelik Sistemi Manage kısmı Türkçeleştirilmesi tammalandı

--- a/TodoList/Views/Manage/ManageLogins.cshtml
+++ b/TodoList/Views/Manage/ManageLogins.cshtml
@@ -1,7 +1,7 @@
 ﻿@model TodoList.Models.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
-    ViewBag.Title = "Manage your external logins";
+    ViewBag.Title = "Dışarıdan girişleri yönetin";
 }
 
 <h2>@ViewBag.Title.</h2>
