--- a/TodoList/Views/Manage/AddPhoneNumber.cshtml
+++ b/TodoList/Views/Manage/AddPhoneNumber.cshtml
@@ -1,6 +1,6 @@
 ﻿@model TodoList.Models.AddPhoneNumberViewModel
 @{
-    ViewBag.Title = "Phone Number";
+    ViewBag.Title = "Telefon Numarası";
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -19,7 +19,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Submit" />
+            <input type="submit" class="btn btn-default" value="Kaydet" />
         </div>
     </div>
 }
