--- a/TodoList/Views/Manage/SetPassword.cshtml
+++ b/TodoList/Views/Manage/SetPassword.cshtml
@@ -1,6 +1,6 @@
 ﻿@model TodoList.Models.SetPasswordViewModel
 @{
-    ViewBag.Title = "Create Password";
+    ViewBag.Title = "Şifre Oluştur";
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -30,7 +30,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Set password" class="btn btn-default" />
+            <input type="submit" value="Şifre Oluştur" class="btn btn-default" />
         </div>
     </div>
 }
