--- a/TodoList/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/TodoList/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,6 +1,6 @@
 ﻿@model TodoList.Models.VerifyPhoneNumberViewModel
 @{
-    ViewBag.Title = "Verify Phone Number";
+    ViewBag.Title = "Telefon Numarası Onaylama";
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -21,7 +21,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Submit" />
+            <input type="submit" class="btn btn-default" value="Onayla" />
         </div>
     </div>
 }
