--- a/TodoList/Views/Manage/Index.cshtml
+++ b/TodoList/Views/Manage/Index.cshtml
@@ -7,10 +7,10 @@
 
 <p class="text-success">@ViewBag.StatusMessage</p>
 <div>
-    <h4>Change your account settings</h4>
+    <h4>Hesap ayarlarınızı değiştirin</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>Password:</dt>
+        <dt>Şifre:</dt>
         <dd>
             [
             @if (Model.HasPassword)
@@ -56,11 +56,11 @@
                 }
             </dd>
         *@
-        <dt>Two-Factor Authentication:</dt>
+        <dt>İki Aşamalı Kullanıcı Girişleri:</dt>
         <dd>
             <p>
-                There are no two-factor authentication providers configured. See <a href="http://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
-                for details on setting up this ASP.NET application to support two-factor authentication.
+                Yapılandırılmış iki aşamalı kimlik doğrulama sağlayıcısı yok. Bu ASP.NET uygulamasını iki aşamalı kimlik doğrulamayı destekleyecek şekilde ayarlamak için
+ <a href="http://go.microsoft.com/fwlink/?LinkId=403804"></a>adresini ziyaret edin.
             </p>
             @*@if (Model.TwoFactor)
                 {
