--- a/TodoList/Views/Manage/ManageLogins.cshtml
+++ b/TodoList/Views/Manage/ManageLogins.cshtml
@@ -12,8 +12,8 @@
     if (loginProviders.Count() == 0) {
         <div>
             <p>
-                There are no external authentication services configured. See <a href="http://go.microsoft.com/fwlink/?LinkId=313242">this article</a>
-                for details on setting up this ASP.NET application to support logging in via external services.
+                Yapılandırılmış harici kimlik doğrulama hizmeti yoktur. Bu ASP.NET uygulamasını harici hizmetler aracılığıyla oturum açmayı destekleyecek şekilde ayarlamak için
+ <a href="http://go.microsoft.com/fwlink/?LinkId=313242"></a> adresini ziyaret edin.
             </p>
         </div>
     }
@@ -21,7 +21,7 @@
     {
         if (Model.CurrentLogins.Count > 0)
         {
-            <h4>Registered Logins</h4>
+            <h4>Kayıtlı Girişler</h4>
             <table class="table">
                 <tbody>
                     @foreach (var account in Model.CurrentLogins)
@@ -37,7 +37,7 @@
                                         <div>
                                             @Html.Hidden("loginProvider", account.LoginProvider)
                                             @Html.Hidden("providerKey", account.ProviderKey)
-                                            <input type="submit" class="btn btn-default" value="Remove" title="Remove this @account.LoginProvider login from your account" />
+                                            <input type="submit" class="btn btn-default" value="Sil" title="@account.LoginProvider girişini hesabınızdan kaldırın" />
                                         </div>
                                     }
                                 }
@@ -60,7 +60,7 @@
                 <p>
                     @foreach (AuthenticationDescription p in Model.OtherLogins)
                     {
-                        <button type="submit" class="btn btn-default" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">@p.AuthenticationType</button>
+                        <button type="submit" class="btn btn-default" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="@p.Caption hesabınızla giriş yapın">@p.AuthenticationType</button>
                     }
                 </p>
                 </div>
