--- a/TodoList/Views/Manage/SetPassword.cshtml
+++ b/TodoList/Views/Manage/SetPassword.cshtml
@@ -5,15 +5,14 @@
 
 <h2>@ViewBag.Title.</h2>
 <p class="text-info">
-    You do not have a local username/password for this site. Add a local
-    account so you can log in without an external login.
+    Bu site için yerel bir kullanıcı adı / şifreniz yok. Harici bir giriş yapılmadan giriş yapabilmeniz için bir yerel hesap ekleyin.
 </p>
 
 @using (Html.BeginForm("SetPassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
 
-    <h4>Create Local Login</h4>
+    <h4>Yerel Giriş Oluşturun</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
