--- a/TodoList/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/TodoList/Views/Manage/VerifyPhoneNumber.cshtml
@@ -9,7 +9,7 @@
 {
     @Html.AntiForgeryToken()
     @Html.Hidden("phoneNumber", @Model.PhoneNumber)
-    <h4>Enter verification code</h4>
+    <h4>Doğrulama kodunu giriniz</h4>
     <h5>@ViewBag.Status</h5>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
