--- a/TodoList/Views/Contacts/Delete.cshtml
+++ b/TodoList/Views/Contacts/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Sil</h2>
 
-<h3>Silmek istediğinize emin misiniz.</h3>
+<h3>Silmek istediğinize emin misiniz?</h3>
 <div>
     <h4>Kişi</h4>
     <hr />
