Üyelik sistemi manage kısmı TR çevirisi yapıldı

--- a/TodoList/Views/Manage/Index.cshtml
+++ b/TodoList/Views/Manage/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model TodoList.Models.IndexViewModel
 @{
-    ViewBag.Title = "Yönetim";
+    ViewBag.Title = "Yönet";
 }
 
 <h2>@ViewBag.Title.</h2>
