--- a/TodoList/Views/Account/ConfirmEmail.cshtml
+++ b/TodoList/Views/Account/ConfirmEmail.cshtml
@@ -1,10 +1,10 @@
 ﻿@{
-    ViewBag.Title = "Confirm Email";
+    ViewBag.Title = "E-Posta Onayla";
 }
 
 <h2>@ViewBag.Title.</h2>
 <div>
     <p>
-        Thank you for confirming your email. Please @Html.ActionLink("Click here to Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+        E-postanızı teyit ettiğiniz için teşekkür ederiz. Lütfen @Html.ActionLink("Buraya Tıkla", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
     </p>
 </div>
