--- a/TodoList/Views/Account/ExternalLoginFailure.cshtml
+++ b/TodoList/Views/Account/ExternalLoginFailure.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewBag.Title = "Login Failure";
+    ViewBag.Title = "Giriş Başarısız";
 }
 
 <hgroup>
     <h2>@ViewBag.Title.</h2>
-    <h3 class="text-danger">Unsuccessful login with service.</h3>
+    <h3 class="text-danger">Oturum açma işlemi başarısız.</h3>
 </hgroup>
