--- a/TodoList/Views/Account/SendCode.cshtml
+++ b/TodoList/Views/Account/SendCode.cshtml
@@ -12,9 +12,9 @@
     <hr />
     <div class="row">
         <div class="col-md-8">
-            Select Two-Factor Authentication Provider:
+            İki Faktörlü Kimlik Doğrulama Sağlayıcısı'nı seçin:
             @Html.DropDownListFor(model => model.SelectedProvider, Model.Providers)
-            <input type="submit" value="Kodu Gönder" class="btn btn-primary" />
+            <input type="submit" value="Kodu Gönder" class="btn btn-default" />
         </div>
     </div>
 }
