--- a/TodoList/Views/Customers/Index.cshtml
+++ b/TodoList/Views/Customers/Index.cshtml
@@ -29,6 +29,18 @@
         <th>
             @Html.DisplayNameFor(model => model.Address)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.CreateDate)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.CreatedBy)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.UpdateDate)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.UpdatedBy)
+        </th>
         <th></th>
     </tr>
 
@@ -51,7 +63,19 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Address)
-        </td>        
+        </td>       
+        <td>
+            @Html.DisplayFor(model => item.CreateDate)
+        </td>
+        <td>
+            @Html.DisplayFor(model => item.CreatedBy)
+        </td>
+        <th>
+            @Html.DisplayFor(model => item.UpdateDate)
+        </th>
+        <td>
+            @Html.DisplayFor(model => item.UpdatedBy)
+        </td>
         <td>
             @Html.ActionLink("Düzenle", "Edit", new { id=item.Id }, new { @class = "btn btn-primary" }) 
             @Html.ActionLink("Ayrıntılar", "Details", new { id=item.Id }, new { @class = "btn btn-success" }) 
