--- a/TodoList/Views/Departments/Delete.cshtml
+++ b/TodoList/Views/Departments/Delete.cshtml
@@ -57,8 +57,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Sil" class="btn btn-default" /> |
-            @Html.ActionLink("Listeye Geri Dön", "Index",null, new { @class = "btn btn-default" })
+            <input type="submit" value="Sil" class="btn btn-danger" /> 
+            @Html.ActionLink("Listeye Geri Dön", "Index")
         </div>
     }
 </div>
