--- a/TodoList/Views/Departments/Details.cshtml
+++ b/TodoList/Views/Departments/Details.cshtml
@@ -53,6 +53,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Düzenle", "Edit", new { id = Model.Id }, new { @class = "btn btn-default" }) |
-    @Html.ActionLink("Listeye Geri Dön", "Index", null, new { @class = "btn btn-default" })
+    @Html.ActionLink("Düzenle", "Edit", new { id = Model.Id }, new { @class = "btn btn-primary" }) 
+    @Html.ActionLink("Listeye Geri Dön", "Index")
 </p>
