--- a/TodoList/Views/Media/Create.cshtml
+++ b/TodoList/Views/Media/Create.cshtml
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Media</h4>
+        <h4>Medya</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
