--- a/TodoList/Views/ApplicationUsers/Delete.cshtml
+++ b/TodoList/Views/ApplicationUsers/Delete.cshtml
@@ -1,18 +1,19 @@
 ﻿@model TodoList.Models.ApplicationUser
 
 @{
-    ViewBag.Title = "Sil";
+    ViewBag.Title = "Kullanıcı Sil";
 }
 
 <h2>Sil</h2>
 
 <h3>Silmek istediğinize emin misiniz?</h3>
 <div>
-    <h4>Kullanıcı Sil</h4>
+    <h4>Kullanıcı</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Email)
+            @*@Html.DisplayNameFor(model => model.Email)*@
+            E-Posta
         </dt>
 
         <dd>
@@ -20,7 +21,8 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.EmailConfirmed)
+            @*@Html.DisplayNameFor(model => model.EmailConfirmed)*@
+            E-Posta Onay
         </dt>
 
         <dd>
@@ -44,7 +46,8 @@
         </dd>*@
 
         <dt>
-            @Html.DisplayNameFor(model => model.PhoneNumber)
+            @*@Html.DisplayNameFor(model => model.PhoneNumber)*@
+            Telefon
         </dt>
 
         <dd>
@@ -52,7 +55,8 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.PhoneNumberConfirmed)
+            @*@Html.DisplayNameFor(model => model.PhoneNumberConfirmed)*@
+            Telefon Onay
         </dt>
 
         <dd>
@@ -60,7 +64,8 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.TwoFactorEnabled)
+            @*@Html.DisplayNameFor(model => model.TwoFactorEnabled)*@
+
         </dt>
 
         <dd>
@@ -84,7 +89,8 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.AccessFailedCount)
+            @*@Html.DisplayNameFor(model => model.AccessFailedCount)*@
+            Başarısız Erişim Sayısı
         </dt>
 
         <dd>
@@ -92,7 +98,8 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.UserName)
+            @*@Html.DisplayNameFor(model => model.UserName)*@
+            Kullanıcı Adı
         </dt>
 
         <dd>
@@ -105,7 +112,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Sil" class="btn btn-danger" /> |
+            <input type="submit" value="Sil" class="btn btn-danger" /> 
             @Html.ActionLink("Listeye Geri Dön", "Index")
         </div>
     }
