--- a/TodoList/Views/Manage/ManageLogins.cshtml
+++ b/TodoList/Views/Manage/ManageLogins.cshtml
@@ -1,7 +1,7 @@
 ﻿@model TodoList.Models.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
-    ViewBag.Title = "Dışarıdan girişleri yönetin";
+    ViewBag.Title = "Harici girişleri yönetin";
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -13,7 +13,7 @@
         <div>
             <p>
                 Yapılandırılmış harici kimlik doğrulama hizmeti yoktur. Bu ASP.NET uygulamasını harici hizmetler aracılığıyla oturum açmayı destekleyecek şekilde ayarlamak için
- <a href="http://go.microsoft.com/fwlink/?LinkId=313242"></a> adresini ziyaret edin.
+ <a href="http://go.microsoft.com/fwlink/?LinkId=313242">http://go.microsoft.com/fwlink/?LinkId=313242</a> adresini ziyaret edin.
             </p>
         </div>
     }
