--- a/TodoList/Views/Manage/SetPassword.cshtml
+++ b/TodoList/Views/Manage/SetPassword.cshtml
@@ -14,7 +14,7 @@
 
     <h4>Yerel Giriş Oluşturun</h4>
     <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
+    @Html.ValidationSummary("Kullanıcının halihazırda bir şifresi var", new { @class = "text-danger" })
     <div class="form-group">
         @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
