TodoItems datatable changes

--- a/TodoList/Views/TodoItems/Delete.cshtml
+++ b/TodoList/Views/TodoItems/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model TodoList.Models.TodoItem
 
 @{
-    ViewBag.Title = "Sil Yapılacak İş";
+    ViewBag.Title = "Yapılacak İş Sil";
 }
 
 <h2>Sil</h2>
