--- a/TodoList/Views/TodoItems/Edit.cshtml
+++ b/TodoList/Views/TodoItems/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model TodoList.Models.TodoItem
 
 @{
-    ViewBag.Title = "Düzenle Yapılacak İş";
+    ViewBag.Title = "Yapılacak İş Düzenle";
 }
 
 <h2>Düzenle</h2>
@@ -28,7 +28,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextAreaFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.Description, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
             </div>
         </div>
