--- a/TodoList/Views/TodoItems/Index.cshtml
+++ b/TodoList/Views/TodoItems/Index.cshtml
@@ -4,234 +4,237 @@
     ViewBag.Title = "Yapılacak İş";
 }
 
-<h2>Yapılacaklar İş</h2>
+<h2>Yapılacak İş</h2>
 
 <p>
     @Html.ActionLink("Yeni Oluştur", "Create",null, new { @class = "btn btn-primary" })
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Category)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Customer)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Department)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Manager)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Organizator)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Side)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Title)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Description)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Status)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Attachment)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.MeetingDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PlannedDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.FinishDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ReviseDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ConversationSubject)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.SupporterCompany)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.SupporterDoctor)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ConversationAttendeeCount)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ScheduledOrganizationDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.MailingSubjects)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PosterSubject)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PosterCount)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Elearning)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TypesOfScans)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AsoCountInScans)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TypesOfOrganization)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AsoCountInOrganizations)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TypesOfVaccinationOrganization)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AsoCountInVaccinationOrganization)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AmountOfCompensationForPoster)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CorporateProductivityReport)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CreateDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CreatedBy)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.UpdateDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.UpdatedBy)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Category.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Customer.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Department.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Manager.FirstName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Organizator.FirstName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Side.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Title)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Description)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Status)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Attachment)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.MeetingDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PlannedDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.FinishDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ReviseDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ConversationSubject)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.SupporterCompany)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.SupporterDoctor)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ConversationAttendeeCount)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ScheduledOrganizationDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.MailingSubjects)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PosterSubject)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PosterCount)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Elearning)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.TypesOfScans)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AsoCountInScans)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.TypesOfOrganization)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AsoCountInOrganizations)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.TypesOfVaccinationOrganization)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AsoCountInVaccinationOrganization)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AmountOfCompensationForPoster)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CorporateProductivityReport)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CreateDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CreatedBy)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UpdateDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UpdatedBy)
-        </td>
-        <td>
-            @Html.ActionLink("Düzenle", "Edit", new { id=item.Id }, new { @class = "btn btn-primary" }) |
-            @Html.ActionLink("Ayrıntılar", "Details", new { id=item.Id }, new { @class = "btn btn-success" }) |
-            @Html.ActionLink("Sil", "Delete", new { id=item.Id }, new { @class = "btn btn-danger" })
-        </td>
-    </tr>
-}
-
+<table id="tblRecords" class="table">
+    <thead>
+        <tr>
+            <th class="text-nowrap all">
+                @Html.DisplayNameFor(model => model.Category)
+            </th>
+            <th class="text-nowrap all">
+                @Html.DisplayNameFor(model => model.Customer)
+            </th>
+            <th class="text-nowrap all">
+                @Html.DisplayNameFor(model => model.Department)
+            </th>
+            <th class="text-nowrap all">
+                @Html.DisplayNameFor(model => model.Manager)
+            </th>
+            <th class="text-nowrap all">
+                @Html.DisplayNameFor(model => model.Organizator)
+            </th>
+            <th class="text-nowrap all">
+                @Html.DisplayNameFor(model => model.Side)
+            </th>
+            <th class="text-nowrap all">
+                @Html.DisplayNameFor(model => model.Title)
+            </th>
+            <th class="text-nowrap all">
+                @Html.DisplayNameFor(model => model.Description)
+            </th>
+            <th class="text-nowrap all">
+                @Html.DisplayNameFor(model => model.Status)
+            </th>
+            <th class="text-nowrap all">
+                @Html.DisplayNameFor(model => model.Attachment)
+            </th>
+            <th class="text-nowrap all">
+                @Html.DisplayNameFor(model => model.MeetingDate)
+            </th>
+            <th class="text-nowrap all">
+                @Html.DisplayNameFor(model => model.PlannedDate)
+            </th>
+            <th class="text-nowrap all">
+                @Html.DisplayNameFor(model => model.FinishDate)
+            </th>
+            <th class="text-nowrap all">
+                @Html.DisplayNameFor(model => model.ReviseDate)
+            </th>
+            <th class="text-nowrap all">
+                @Html.DisplayNameFor(model => model.ConversationSubject)
+            </th>
+            <th class="text-nowrap all">
+                @Html.DisplayNameFor(model => model.SupporterCompany)
+            </th>
+            <th class="text-nowrap all">
+                @Html.DisplayNameFor(model => model.SupporterDoctor)
+            </th>
+            <th class="text-nowrap all">
+                @Html.DisplayNameFor(model => model.ConversationAttendeeCount)
+            </th>
+            <th class="text-nowrap all">
+                @Html.DisplayNameFor(model => model.ScheduledOrganizationDate)
+            </th>
+            <th class="text-nowrap all">
+                @Html.DisplayNameFor(model => model.MailingSubjects)
+            </th>
+            <th class="text-nowrap all">
+                @Html.DisplayNameFor(model => model.PosterSubject)
+            </th>
+            <th class="text-nowrap all">
+                @Html.DisplayNameFor(model => model.PosterCount)
+            </th>
+            <th class="text-nowrap all">
+                @Html.DisplayNameFor(model => model.Elearning)
+            </th>
+            <th class="text-nowrap all">
+                @Html.DisplayNameFor(model => model.TypesOfScans)
+            </th>
+            <th class="text-nowrap all">
+                @Html.DisplayNameFor(model => model.AsoCountInScans)
+            </th>
+            <th class="text-nowrap all">
+                @Html.DisplayNameFor(model => model.TypesOfOrganization)
+            </th>
+            <th class="text-nowrap all">
+                @Html.DisplayNameFor(model => model.AsoCountInOrganizations)
+            </th>
+            <th class="text-nowrap all">
+                @Html.DisplayNameFor(model => model.TypesOfVaccinationOrganization)
+            </th>
+            <th class="text-nowrap all">
+                @Html.DisplayNameFor(model => model.AsoCountInVaccinationOrganization)
+            </th>
+            <th class="text-nowrap all">
+                @Html.DisplayNameFor(model => model.AmountOfCompensationForPoster)
+            </th>
+            <th class="text-nowrap all">
+                @Html.DisplayNameFor(model => model.CorporateProductivityReport)
+            </th>
+            <th class="text-nowrap all">
+                @Html.DisplayNameFor(model => model.CreateDate)
+            </th>
+            <th class="text-nowrap all">
+                @Html.DisplayNameFor(model => model.CreatedBy)
+            </th>
+            <th class="text-nowrap all">
+                @Html.DisplayNameFor(model => model.UpdateDate)
+            </th>
+            <th class="text-nowrap all">
+                @Html.DisplayNameFor(model => model.UpdatedBy)
+            </th>
+            <th  data-orderable="false" class="all">Eylemler</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Category.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Customer.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Department.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Manager.FirstName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Organizator.FirstName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Side.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Title)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Description)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Status)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Attachment)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.MeetingDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PlannedDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FinishDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ReviseDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ConversationSubject)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.SupporterCompany)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.SupporterDoctor)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ConversationAttendeeCount)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ScheduledOrganizationDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.MailingSubjects)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PosterSubject)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PosterCount)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Elearning)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TypesOfScans)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.AsoCountInScans)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TypesOfOrganization)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.AsoCountInOrganizations)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TypesOfVaccinationOrganization)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.AsoCountInVaccinationOrganization)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.AmountOfCompensationForPoster)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CorporateProductivityReport)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CreateDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CreatedBy)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.UpdateDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.UpdatedBy)
+                </td>
+                <td>
+                    @Html.ActionLink("Düzenle", "Edit", new { id = item.Id }, new { @class = "btn btn-primary" }) |
+                    @Html.ActionLink("Ayrıntılar", "Details", new { id = item.Id }, new { @class = "btn btn-success" }) |
+                    @Html.ActionLink("Sil", "Delete", new { id = item.Id }, new { @class = "btn btn-danger" })
+                </td>
+            </tr>
+        }
+    </tbody>
 </table>
