--- a/TodoList/Views/Account/Login.cshtml
+++ b/TodoList/Views/Account/Login.cshtml
@@ -27,7 +27,7 @@ License: You must have a valid license purchased only from themeforest(the above
 <!-- BEGIN HEAD -->
 <head>
     <meta charset="utf-8" />
-    <title>Metronic Admin Theme #4 | User Login 4</title>
+    <title>To do List</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta content="Preview page of Metronic Admin Theme #4 for " name="description" />
