applicationusers index düzeltme

--- a/TodoList/Views/ApplicationUsers/Index.cshtml
+++ b/TodoList/Views/ApplicationUsers/Index.cshtml
@@ -16,7 +16,7 @@
                 E-Posta
             </th>
             <th class="text-nowrap">
-                Email Onay
+                E-Posta Onay
             </th>
             <th class="text-nowrap">
                 Telefon
