Guncelle Yunus Demirel

--- a/TodoList/Views/Shared/_Layout.cshtml
+++ b/TodoList/Views/Shared/_Layout.cshtml
@@ -1419,7 +1419,7 @@ License: You must have a valid license purchased only from themeforest(the above
             <div class="page-footer-inner">
                 2017 &copy; Acıbadem Sigorta 
                 <a target="_blank" href="http://keenthemes.com"></a> &nbsp;|&nbsp;
-                <a href="http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes" title="Purchase Metronic just for 27$ and get lifetime updates for free" target="_blank">TodoList</a>
+               TodoList
             </div>
             <div class="scroll-to-top">
                 <i class="icon-arrow-up"></i>
