--- a/TodoList/Views/Media/Create.cshtml
+++ b/TodoList/Views/Media/Create.cshtml
@@ -58,7 +58,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Year, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Year, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Year, new { htmlAttributes = new { @class = "form-control" , @Value=Model.Year.ToString(DateTime.Now.Year.ToString())} })
                 @Html.ValidationMessageFor(model => model.Year, "", new { @class = "text-danger" })
             </div>
         </div>
