--- a/TodoList/Views/Media/ExportToExcel.cshtml
+++ b/TodoList/Views/Media/ExportToExcel.cshtml
@@ -1,31 +1,30 @@
 ﻿@model IEnumerable<TodoList.Models.Media>
 @{
-    ViewBag.Title = "ExportToExcel";
     Layout = null;
 }
 
 <body>
     <div>
-        <h2>Urun Listesi</h2>
+        <h2>Medya Listesi</h2>
         @{
-            var urunler = Model;
+            var medias= Model;
             Response.AddHeader("Content-disposition", "attachment; filename=urunler.xls");
             Response.ContentType = "application/octet-stream";
-            var ilkSatir = urunler.FirstOrDefault();
+            var firstLine = medias.FirstOrDefault();
         }
         <table style="border: 1px solid black;">
             <tr style="font-weight: bold">
-                @foreach (var ozellik in ilkSatir.GetType().GetProperties())
+                @foreach (var property in firstLine.GetType().GetProperties())
                 {
-                    <td style="border: 1px solid #a59f9f;">@ozellik.Name</td>
+                    <td style="border: 1px solid #a59f9f;">@property.Name</td>
                 }
             </tr>
-            @foreach (var urun in urunler)
+            @foreach (var media in medias)
             {
                 <tr>
-                    @foreach (var urunOzelligi in urun.GetType().GetProperties())
+                    @foreach (var mediaProperty in media.GetType().GetProperties())
                     {
-                        <td style="border: 1px solid black;">@urunOzelligi.GetValue(urun, null)</td>
+                        <td style="border: 1px solid black;">@mediaProperty.GetValue(media, null)</td>
                     }
                 </tr>
             }
